Page component extra space on mobile fixed

--- a/src/components/PageComponent/PageComponent.scss
+++ b/src/components/PageComponent/PageComponent.scss
@@ -33,3 +33,9 @@
     }
   }
 }
+
+@media (max-width: 600px) {
+  .pageComponent {
+    padding-top: 75px;
+  }
+}
